Bug 99072 - [byt,ivb,snb] ES3-CTS.gtf.GL3Tests.shadow regression
Summary: [byt,ivb,snb] ES3-CTS.gtf.GL3Tests.shadow regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Iago Toral
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-13 18:19 UTC by Mark Janes
Modified: 2016-12-15 17:54 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2016-12-13 18:19:21 UTC
Bisected to:

44873ad0a45281479434a9183b644cb29407829b
Author:     Iago Toral Quiroga <itoral@igalia.com>
i965: remove brw_lower_texture_gradients

This has been ported to NIR now so we don'tneed to keep the GLSL IR
lowering any more.


Tests crash with no output.

This regression was not caught by the CI prior to commit because we do not have enough snb/ivb/byt systems to run the gles cts for developer builds in a timely manner.
Comment 1 Iago Toral 2016-12-14 09:08:54 UTC
(In reply to Mark Janes from comment #0)
> Bisected to:
> 
> 44873ad0a45281479434a9183b644cb29407829b
> Author:     Iago Toral Quiroga <itoral@igalia.com>
> i965: remove brw_lower_texture_gradients
> 
> This has been ported to NIR now so we don'tneed to keep the GLSL IR
> lowering any more.
> 
> 
> Tests crash with no output.
> 
> This regression was not caught by the CI prior to commit because we do not
> have enough snb/ivb/byt systems to run the gles cts for developer builds in
> a timely manner.

I have sent a patch that fixes this:
https://lists.freedesktop.org/archives/mesa-dev/2016-December/138235.html
Comment 2 Iago Toral 2016-12-15 17:54:44 UTC
The patch landed in master and this should be fixed now:

commit 47351b843a8213e931bbd70cb6a2501b87cb525e
Author: Iago Toral Quiroga <itoral@igalia.com>
Date:   Wed Dec 14 10:05:44 2016 +0100

    nir/lower_tex: fix number of components in replace_gradient_with_lod()
    
    We should make the dest in the textureLod() operation have the same number
    of components as the destination in the original textureGrad()
    
    Fixes regression in ES3-CTS.gtf.GL3Tests.shadow
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=99072
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.